Adiciona documentação do swagger no metodo store
